tests/failing/if_condition_not_bool.dodo
fn main() {
    if 2 {
        printf("This should not be printed\n");
    }
}
